[project]
name = "mkdocs-dracula-theme"
version = "1.0.8-dev1"
authors = [
  { name="Fernando Celmer", email="email@fernandocelmer.com" },
]
maintainers = [
  { name="Fernando Celmer", email="email@fernandocelmer.com" },
  { name="Lautaro Linquimán", email="lylinquiman@gmail.com" }
]
license = {file = "LICENSE"}
description = "Dark theme for Mkdocs"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["mkdocs (>=1.6.1,<2.0.0)"]
keywords = ["mkdocs", "dracula", "theme", "dark", "documentation"]
classifiers = [
  'Development Status :: 4 - Beta',
  "Operating System :: OS Independent",
  'Intended Audience :: Developers',
  'Natural Language :: English',
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://draculatheme.com/mkdocs"
Issues = "https://github.com/dracula/mkdocs/issues"
Repository = "https://github.com/dracula/mkdocs"
Documentation = "https://dracula.github.io/mkdocs"
Changelog = "https://dracula.github.io/mkdocs/nav/development/release-notes"


[tool.poetry]
name = "mkdocs-dracula-theme"
version = "1.0.8-dev1"
description = "Dark theme for Mkdocs"
authors = ["Fernando Celmer <email@fernandocelmer.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.0"
mkdocs = { version = ">=1.6.1,<2.0.0" }

[tool.poetry.group.dev.dependencies]
build = "^1.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."mkdocs.themes"]
dracula = "mkdocs_dracula_theme"